ClientCache.java - Added getCache, cacheContainsFile, and a TODO
FileClient.java
- Added client name
- Added invalidate code
- Added writeback code
- Added code for checking cache and adding file to cache